Fixed z-index bug with header social links on author page (#370)
no issue
- add z-index to `.author-bio` and `.author-meta` so they aren't covered by the header image overlay

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1528,6 +1528,7 @@ Usage (In Ghost editor):
 
 .site-header-content .author-bio {
     flex-shrink: 0;
+    z-index: 10;
     max-width: 600px;
     margin: 5px 0 10px 0;
     font-size: 2rem;
@@ -1539,6 +1540,7 @@ Usage (In Ghost editor):
 
 .site-header-content .author-meta {
     flex-shrink: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
     align-items: center;
